@@ -9,7 +9,6 @@ Mac OS X integration:
 
 General TODOs:
 --------------
-- SF feature request #3554633: Interpolate weight in overview diagram
 - Import feature for devices connected via USB
   - New Tab in Options dialog with these settings:
     - Device directory/drive
