@@ -11,6 +11,8 @@ v5.6.0:
     - The appbundler Ant library is now included, no installation needed.
   - Java WebStart for Mac OS X is working again, when JDK / JRE 7u6 or later
     is installed.
+  - Overview Dialog: improved weight graph (SF feature request #3554633):
+    Missing weight values will be interpolated instead of set to 0.
  ExerciseViewer changes:
   - Garmin TCX Parser: Fix for SourceForge-Bug #3551583 
     (Fail to parse tcx files with laps without altitude)
